Include xdebug on composer.json. For now, suggest it - but it's really required.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,11 @@
         "sebastian/diff": "~1.1"
     },
     "require-dev": {
-        "mockery/mockery": "~0.9"
+        "mockery/mockery": "~0.9",
+        "ext-xdebug": ">=2.1.4"
+    },
+    "suggest": {
+        "ext-xdebug": ">=2.2.1"
     },
     "autoload": {
         "psr-0": { "Humbug\\": "src/" }
