Misc & Added a TestListener to free up memory during unit test runs for a wee kick.

--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,19 @@
         "symfony/console": "~2.6",
         "symfony/finder": "~2.6",
         "symfony/process": "~2.6",
-        "sebastian/diff": "~1.1"
+        "sebastian/diff": "~1.1",
+        "mybuilder/phpunit-accelerator": "dev-shutdownfunction"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
         "ext-xdebug": ">=2.1.4"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/padraic/phpunit-accelerator.git"
+        }
+    ],
     "suggest": {
         "ext-xdebug": ">=2.2.1"
     },
