Composer not resolving a custom branch in some cases, so reverting.
If your tests (not source) ever use register_shutdown_function(), this will cause problems.

--- a/composer.json
+++ b/composer.json
@@ -22,18 +22,12 @@
         "symfony/finder": "~2.6",
         "symfony/process": "~2.6",
         "sebastian/diff": "~1.1",
-        "mybuilder/phpunit-accelerator": "dev-shutdownfunction"
+        "mybuilder/phpunit-accelerator": ">=1.0.1"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
         "ext-xdebug": ">=2.1.4"
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/padraic/phpunit-accelerator.git"
-        }
-    ],
+    },,
     "suggest": {
         "ext-xdebug": ">=2.2.1"
     },
