--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
     "support": {
         "issues": "https://github.com/padraic/humbug/issues"
     },
-    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
         "phpunit/phpunit": "~4.4",
@@ -23,14 +22,14 @@
         "symfony/finder": "~2.6",
         "symfony/process": "~2.6",
         "sebastian/diff": "~1.1",
-        "padraic/phpunit-accelerator": "~1.0"
+        "padraic/phpunit-accelerator": "^1.0.2"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
-        "ext-xdebug": ">=2.1.4"
+        "ext-xdebug": "^2.1.4"
     },
     "suggest": {
-        "ext-xdebug": ">=2.2.1"
+        "ext-xdebug": "^2.1.4"
     },
     "autoload": {
         "psr-0": { "Humbug\\": "src/" }
