--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,42 @@
-/composer.phar
-/vendor
+# IntelliJ - PhpStorm and PyCharm
+.idea
+*.iml
+*.ipr
+*.iws
+
+# Netbeans
+nbproject
+.nbproject
+.nbproject/*
+nbproject/*
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Mac OSX
+.DS_Store
+# Thumbnails
+._*
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# SublimeText project files
+/*.sublime-project
+*.sublime-workspace
+
+build
+composer.lock
+docs
+vendor
+
+#Other generic stuff that might be
+composer.phar
 phpunit.xml
 .vagrant
 Vagrantfile
 test.php
-composer.lock
