--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require": {
         "php": ">=5.4.0",
+        "ext-xdebug": "*",
         "phpunit/phpunit": "~4.4",
         "symfony/console": "~2.6",
         "symfony/finder": "~2.6",
