--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Padraic Brady",
+            "name": "Pádraic Brady",
             "email": "padraic.brady@gmail.com",
             "homepage": "http://blog.astrumfutura.com"
         }
