--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "sebastian/diff": "~1.1",
         "padraic/phpunit-accelerator": "^1.0.2",
         "padraic/phpunit-extensions": "~1.0@dev",
-        "padraic/phpspec-extensions": "~1.0@dev",
-        "henrikbjorn/phpspec-code-coverage": "~1.0"
+        "padraic/phpspec-extensions": "~1.0@dev"
     },
     "require-dev": {
         "mockery/mockery": "~0.9"
