Apply #89 : psr-4 under src/ directly

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "mockery/mockery": "~0.9"
     },
     "autoload": {
-        "psr-4": { "Humbug\\": "src/Humbug/" }
+        "psr-4": { "Humbug\\": "src/" }
     },
     "autoload-dev": {
         "psr-4": { "Humbug\\Test\\": "tests/Humbug/Test/" }
