--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "psr-4": { "Humbug\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "Humbug\\Test\\": "tests/Humbug/Test/" }
+        "psr-4": { "Humbug\\Test\\": "tests/" }
     },
     "bin": ["bin/humbug"],
     "extra": {
