Implement a self-update command mapped to https://padraic.github.io/humbug/downloads Note: SSL/TLS is enforced

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ nb-configuration.xml
 *.sublime-workspace
 
 humbug.phar
+humbug.phar.temp
+humbug-*.phar.old
+humbug.version
 build
 composer.lock
 docs
