--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "sebastian/diff": "~1.1",
         "padraic/phpunit-accelerator": "^1.0.2",
         "padraic/phpunit-extensions": "~1.0@dev",
-        "padraic/humbug_get_contents": "~1.0"
+        "padraic/phar-updater": "~1.0@dev"
     },
     "require-dev": {
         "mockery/mockery": "~0.9"
