--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "padraic/phar-updater": "~1.0@dev"
     },
     "require-dev": {
-        "mockery/mockery": "~0.9"
+        "mockery/mockery": "~0.9",
+        "behat/behat": "^3.0.15"
     },
     "autoload": {
         "psr-4": { "Humbug\\": "src/" }
