--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 
 php:
-  - nightly
+  - 7.0
   - 5.6
   - 5.5
   - 5.4
@@ -10,7 +10,7 @@ php:
 
 matrix:
     allow_failures:
-        - php: nightly
+        - php: 7.0
         - php: hhvm
         - php: hhvm-nightly
 
@@ -22,3 +22,4 @@ before_script:
 
 script:
     - vendor/bin/phpunit --coverage-text
+    - vendor/bin/behat --format=pretty
