--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/process": "~2.6",
         "sebastian/diff": "~1.1",
         "padraic/phpunit-accelerator": "^1.0.2",
-        "padraic/phpunit-extensions": "~1.0@dev",
+        "padraic/phpunit-extensions": "dev-master#84ed9a00485b154c90b39dc4e533cade2d939069",
         "padraic/phar-updater": "~1.0@dev"
     },
     "require-dev": {
