Add BracketedStatement mutator on return values This catches any statement enclosed in brackets (without regard for evaluated return value or content)

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,6 +23,9 @@
     <filter>
         <whitelist>
             <directory>./src/</directory>
+            <exclude>
+                <file>./src/StreamWrapper/IncludeInterceptor.php</file>
+            </exclude>
         </whitelist>
     </filter>
     
