--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
-        "behat/behat": "^3.0.15"
+        "behat/behat": "^3.0.15",
+        "symfony/filesystem": "~2.6"
     },
     "autoload": {
         "psr-4": { "Humbug\\": "src/" }
