Add MutantTest and also get in vfrStream to mock FS

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,5 +28,9 @@
             </exclude>
         </whitelist>
     </filter>
+
+    <listeners>
+        <listener class="\Mockery\Adapter\Phpunit\TestListener"></listener>
+    </listeners>
     
 </phpunit>
