Move to behat progress output on travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ before_script:
 
 script:
     - vendor/bin/phpunit --coverage-text
-    - vendor/bin/behat --format=pretty
+    - vendor/bin/behat
