--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/console": "~2.6",
         "symfony/finder": "~2.6",
         "symfony/process": "~2.6",
+        "symfony/event-dispatcher": "~2.6",
         "sebastian/diff": "~1.1",
         "padraic/phpunit-accelerator": "^1.0.2",
         "padraic/phpunit-extensions": "~1.0@dev",
