--- a/box.json.dist
+++ b/box.json.dist
@@ -14,6 +14,7 @@
             ],
             "exclude": [
                 "tests",
+                "Tests",
                 "mockery",
                 "behat",
                 "symfony/class-loader",
