--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+sudo: false
 
 php:
   - 7.0
@@ -19,11 +20,15 @@ branches:
   only:
     - master
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 before_install:
-  - composer self-update
+  - travis_retry composer self-update
 
 before_script:
-  - travis_retry composer install --no-interaction --prefer-source
+  - travis_retry composer install --no-interaction
 
 script:
   - vendor/bin/phpunit --coverage-text
