--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "phpunit/phpunit": "~4.5",
+        "phpspec/phpspec": "~2.1",
         "symfony/console": "~2.6",
         "symfony/finder": "~2.6",
         "symfony/process": "~2.6",
@@ -25,6 +26,7 @@
         "sebastian/diff": "~1.1",
         "padraic/phpunit-accelerator": "^1.0.2",
         "padraic/phpunit-extensions": "^1.0.0",
+        "padraic/phpspec-extensions": "~1.0@dev",
         "padraic/phar-updater": "^1.0.0"
     },
     "require-dev": {
