--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/finder": "~2.6",
         "symfony/process": "~2.6",
         "symfony/event-dispatcher": "~2.6",
+        "symfony/yaml": "~2.6",
         "sebastian/diff": "~1.1",
         "padraic/phpunit-accelerator": "^1.0.2",
         "padraic/phpunit-extensions": "^1.0.0",
