Update default exclude files for phar build

--- a/box.json.dist
+++ b/box.json.dist
@@ -18,6 +18,11 @@
                 "mockery",
                 "behat",
                 "symfony/filesystem",
+                "symfony/translation",
+                "symfony/class-loader",
+                "symfony/dependency-injection",
+                "symfony/config",
+                "symfony/filesystem",
                 "mikey179"
             ],
             "in": [
