Update phar build config

--- a/box.json.dist
+++ b/box.json.dist
@@ -10,7 +10,8 @@
     "finder": [
         {
             "name": [
-                "*.php"
+                "*.php",
+                "*.dist"
             ],
             "exclude": [
                 "tests",
