--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         "symfony/event-dispatcher": "~2.6",
         "sebastian/diff": "~1.1",
         "padraic/phpunit-accelerator": "^1.0.2",
-        "padraic/phpunit-extensions": "~1.0@dev",
-        "padraic/phar-updater": "~1.0@dev"
+        "padraic/phpunit-extensions": "^1.0.0",
+        "padraic/phar-updater": "^1.0.0"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
