--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "phpunit/phpunit": "~4.5",
+        "phpunit/phpunit": "^4.5|^5.0",
         "symfony/console": "~2.6",
         "symfony/finder": "~2.6",
         "symfony/process": "~2.6",
