--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,41 @@
 language: php
 sudo: false
 
-php:
-  - 7.0
-  - 5.6
-  - 5.5
-  - 5.4
-  - hhvm
-  - hhvm-nightly
-
 matrix:
+  include:
+    - php: 5.4
+      env: DEPS=lowest
+    - php: 5.4
+      env: DEPS=latest
+    - php: 5.5
+      env: DEPS=lowest
+    - php: 5.5
+      env: DEPS=latest
+    - php: 5.6
+      env: DEPS=lowest
+    - php: 5.6
+      env: DEPS=latest
+    - php: 7.0
+      env: DEPS=lowest
+    - php: 7.0
+      env: DEPS=latest
+    - php: 7.1
+      env: DEPS=lowest
+    - php: 7.1
+      env: DEPS=latest
+    - php: hhvm
+      env: DEPS=lowest
+    - php: hhvm
+      env: DEPS=latest
+    - php: hhvm-nightly
+      env: DEPS=lowest
+    - php: hhvm-nightly
+      env: DEPS=latest
   fast_finish: true
   allow_failures:
-    - php: 7.0
     - php: hhvm
     - php: hhvm-nightly
-        
+
 branches:
   only:
     - master
@@ -28,7 +48,8 @@ before_install:
   - travis_retry composer self-update
 
 before_script:
-  - travis_retry composer install --no-interaction
+  - if [[ $DEPS == 'latest' ]]; then travis_retry composer update --no-interaction --prefer-source ; fi
+  - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --no-interaction --prefer-source --prefer-lowest ; fi
 
 script:
   - vendor/bin/phpunit --coverage-text
