--- a/box.json.dist
+++ b/box.json.dist
@@ -36,5 +36,5 @@
     "output": "build/humbug.phar",
     "stub": true,
     "compactors": "Herrera\\Box\\Compactor\\Php",
-    "compression": "BZ2"
+    "compression": "GZ"
 }
