--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 language: php
+
+php:
+  - 5.6
+  - 7.0
+  - 7.1:
+    env: PHPUNIT_FLAGS='--coverage-text'
+  - hhvm
+
+env:
+  - COMPOSER_FLAGS="--prefer-lowest"
+  - COMPOSER_FLAGS=
+
 matrix:
-  include:
-    - php: 5.6
-    - php: 7.0
-    - php: 7.1
-      env: PHPUNIT_FLAGS='--coverage-text'
-    - php: hhvm
   fast_finish: true
   allow_failures:
     - php: hhvm
-
-env:
-  matrix:
-    - COMPOSER_FLAGS="--prefer-lowest"
-    - COMPOSER_FLAGS=""
 
 cache:
   directories:
