--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,17 @@ language: php
 php:
   - 5.6
   - 7.0
-  - 7.1:
-    env: PHPUNIT_FLAGS='--coverage-text'
+  - 7.1
   - hhvm
 
 env:
   - COMPOSER_FLAGS="--prefer-lowest"
-  - COMPOSER_FLAGS=
+  - COMPOSER_FLAGS=""
 
 matrix:
+  php:
+    - 7.1:
+      env: PHPUNIT_FLAGS='--coverage-text'
   fast_finish: true
   allow_failures:
     - php: hhvm
