--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
   - COMPOSER_FLAGS=""
 
 matrix:
-  php:
-    - 7.1:
+  include:
+    - php: 7.1
       env: PHPUNIT_FLAGS='--coverage-text'
   fast_finish: true
   allow_failures:
