Make Travis build passing again

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -4,3 +4,5 @@ default:
       contexts: [ FeatureContext, FilesystemContext ]
   formatters:
     progress: ~
+  extensions:
+    Cjm\Behat\VersionBasedTestSkipperExtension: ~
