--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "mockery/mockery": "^0.9",
         "behat/behat": "^3.0.15",
         "symfony/filesystem": "^2.6|^3.0",
-        "mikey179/vfsStream": "^1.4"
+        "mikey179/vfsStream": "^1.4",
+        "ciaranmcnulty/versionbasedtestskipper": "^0.2.1"
     },
     "autoload": {
         "psr-4": { "Humbug\\": "src/" }
