--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ init:
     - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;%PATH%
     - SET PHP=1
     - SET ANSICON=121x90 (121x90)
+    - SET COMPOSER_NO_INTERACTION=1
 
 install:
     - IF EXIST c:\tools\php (SET PHP=0)
@@ -38,8 +39,8 @@ install:
     - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
     - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
     - cd c:\projects\workspace
-    - IF %dependencies%==lowest appveyor-retry composer update --no-interaction --no-suggest --prefer-dist --prefer-lowest
-    - IF %dependencies%==highest appveyor-retry composer update ---no-interaction --no-suggest --prefer-dist
+    - IF %dependencies%==lowest appveyor-retry composer update --no-suggest --prefer-dist --prefer-lowest
+    - IF %dependencies%==highest appveyor-retry composer update --no-suggest --prefer-dist
     - composer show
 
 
