--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,9 +26,11 @@ init:
     - SET PHP=1
     - SET ANSICON=121x90 (121x90)
     - SET COMPOSER_NO_INTERACTION=1
+    - SET XDEBUG_VERSION=2.5.3 # As of 24 April 2017 - UPDATE REGULARLY
 
 install:
     - IF EXIST c:\tools\php (SET PHP=0)
+    # Install PHP
     - ps: appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_ver_target | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
     - cd c:\tools\php
     - IF %PHP%==1 copy php.ini-production php.ini /Y
@@ -37,6 +39,23 @@ install:
     - IF %PHP%==1 echo extension=php_openssl.dll >> php.ini
     - IF %PHP%==1 echo extension=php_mbstring.dll >> php.ini
     - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
+    # Install xdebug
+    - ps: |
+            $phpMinorVersion = $env:PHP_VERSION -replace '\.\d+$'
+            $vcVersion = "VC14"
+            if ($phpMinorVersion = "5.6")
+            {
+                $vcVersion = "VC11"
+            }
+            $xdebugUrl = "https://xdebug.org/files/php_xdebug-$env:XDEBUG_VERSION-$phpMinorVersion-vc$env:VC_VERSION-nts.dll"
+            Write-Output "Downloading $xdebugUrl"
+            $xdebugPath = Join-Path $PWD 'php\ext\xdebug.dll'
+            $client.DownloadFile($xdebugUrl, $xdebugPath)
+            Add-Content .\php\php.ini @"
+            extension_dir=ext
+            zend_extension=$xdebugPath
+            "@
+    # Install composer and update per matrix
     - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
     - cd c:\projects\workspace
     - IF %dependencies%==lowest appveyor-retry composer update --no-suggest --prefer-dist --prefer-lowest
