Make VC explicit

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,8 +43,7 @@ install:
     - ps: |
             $client = New-Object System.Net.WebClient
             $phpMinorVersion = $env:PHP_VERSION -replace '\.\d+$'
-            $vcVersion = 'VC14'
-            $xdebugUrl = "https://xdebug.org/files/php_xdebug-$env:XDEBUG_VERSION-$phpMinorVersion-vc$env:VC_VERSION-nts.dll"
+            $xdebugUrl = "https://xdebug.org/files/php_xdebug-$env:XDEBUG_VERSION-$phpMinorVersion-vc14-nts.dll"
             Write-Output "Downloading $xdebugUrl"
             $xdebugPath = Join-Path $PWD 'ext\xdebug.dll'
             $client.DownloadFile($xdebugUrl, $xdebugPath)
