--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,7 +42,7 @@ install:
     # Install xdebug
     - ps: |
             $client = New-Object System.Net.WebClient
-            $xdebugUrl = "https://xdebug.org/files/php_xdebug-$env:XDEBUG_VERSION-$env:php_ver_target-vc14-nts.dll"
+            $xdebugUrl = "https://xdebug.org/files/php_xdebug-$env:XDEBUG_VERSION-$env:php_ver_target-vc14-nts-x86_64.dll"
             $xdebugPath = 'c:\tools\php\ext\xdebug.dll'
             Write-Output "Downloading $xdebugUrl"
             Write-Output "to $xdebugPath"
