Patch some tests towards passing state

--- a/tests/Adapter/_files/phpunit2/phpunit.xml.dist
+++ b/tests/Adapter/_files/phpunit2/phpunit.xml.dist
@@ -20,7 +20,9 @@
 
     <filter>
         <whitelist>
-            <directory>.</directory>
+            <exclude>
+                <directory>.</directory>
+            </exclude>
         </whitelist>
     </filter>
     
