--- a/tests/Adapter/_files/regression/server-argv/phpunit.xml.dist
+++ b/tests/Adapter/_files/regression/server-argv/phpunit.xml.dist
@@ -17,5 +17,11 @@
             <directory>.</directory>
         </testsuite>
     </testsuites>
-    
+    <filter>
+        <whitelist>
+            <exclude>
+                <directory>.</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 </phpunit>
