--- a/tests/Adapter/_files/phpunit.xml.dist
+++ b/tests/Adapter/_files/phpunit.xml.dist
@@ -22,7 +22,9 @@
 
     <filter>
         <whitelist>
-            <directory>.</directory>
+            <exclude>
+                <directory>.</directory>
+            </exclude>
         </whitelist>
     </filter>
     
