--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,7 @@ install:
     - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
     # Install xdebug
     - ps: |
-            IF %XDEBUG%==0 return
+            IF (%XDEBUG%==0) {return}
             $client = New-Object System.Net.WebClient
             $xdebugUrl = "https://xdebug.org/files/php_xdebug-$env:XDEBUG_VERSION-$env:php_ver_target-vc14-nts-x86_64.dll"
             $xdebugPath = 'c:\tools\php\ext\xdebug.dll'
