Enable Windows update service
Creates random fails on Appveyor where an update is not run

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,8 @@ init:
 
 install:
     - IF EXIST c:\tools\php (SET PHP=0)
+    # Enable Windows update service
+    - ps: Set-Service wuauserv -StartupType Manual
     # Install PHP
     - ps: appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_ver_target | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
     - cd c:\tools\php
