--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/filesystem": "^2.6|^3.0",
         "mikey179/vfsStream": "^1.4",
         "ciaranmcnulty/versionbasedtestskipper": "^0.2.1",
-        "squizlabs/php_codesniffer": "^2.8"
+        "squizlabs/php_codesniffer": "^2.8",
+        "bamarni/composer-bin-plugin": "^1.1"
     },
     "autoload": {
         "psr-4": { "Humbug\\": "src/" }
@@ -50,6 +51,8 @@
     "scripts": {
         "test": "phpunit",
         "cs:check": "phpcs -pn --standard=PSR2 --runtime-set ignore_warnings_on_exit 1 src tests --ignore=*_files*,*XmlConfigurationBuilderTest.php,*IncludeInterceptor.php",
-        "cs:fix": "phpcbf -pn --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests --ignore=*_files*,*XmlConfigurationBuilderTest.php,*IncludeInterceptor.php"
+        "cs:fix": "phpcbf -pn --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests --ignore=*_files*,*XmlConfigurationBuilderTest.php,*IncludeInterceptor.php",
+        "post-install-cmd": ["@composer bin all install --ansi"],
+        "post-update-cmd": ["@composer bin all update --ansi"]
     }
 }
