--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ php:
   - 5.6
   - 7.0
   - 7.1
-  - hhvm
 
 env:
   - COMPOSER_FLAGS=--prefer-lowest
@@ -14,12 +13,15 @@ matrix:
   include:
     - php: 7.1
       env: PHPUNIT_FLAGS=--coverage-text
+    - php: hhvm
+      dist: trusty
   exclude:
     - php: 7.1
       env: COMPOSER_FLAGS=
   fast_finish: true
   allow_failures:
     - php: hhvm
+      dist: trusty
 
 cache:
   directories:
