--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^5.7||^6.0",
         "symfony/console": "^2.6|^3.0",
         "symfony/finder": "^2.6|^3.0",
         "symfony/process": "^2.6|^3.0",
