--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
         "issues": "https://github.com/padraic/humbug/issues"
     },
     "require": {
-        "php": ">=5.6.0",
-        "phpunit/phpunit": "^5.7||^6.0",
+        "php": "^7.0",
+        "phpunit/phpunit": "^6.0",
         "symfony/console": "^2.6|^3.0",
         "symfony/finder": "^2.6|^3.0",
         "symfony/process": "^2.6|^3.0",
         "symfony/event-dispatcher": "^2.6|^3.0",
-        "sebastian/diff": "^1.1",
+        "sebastian/diff": "^2.0",
         "padraic/phpunit-accelerator": "^1.0.2",
         "padraic/phpunit-extensions": "^1.0.0",
         "padraic/phar-updater": "^1.0.0"
