--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
     "support": {
         "issues": "https://github.com/padraic/humbug/issues"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/humbug/phpunit-accelerator"
+        }
+    ],
     "require": {
         "php": "^7.0",
         "phpunit/phpunit": "^6.0",
@@ -23,7 +29,7 @@
         "symfony/process": "^2.6|^3.0",
         "symfony/event-dispatcher": "^2.6|^3.0",
         "sebastian/diff": "^2.0",
-        "padraic/phpunit-accelerator": "^1.0.2",
+        "padraic/phpunit-accelerator": "dev-master",
         "padraic/phpunit-extensions": "^1.0.0",
         "padraic/phar-updater": "^1.0.0"
     },
